objects/ASI_KOR_Item_Group__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_KR_Priority_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_StockInTradeSIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock In Trade(SIT)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Btl_9L__c</fullName>
        <formula>9000/ ASI_KOR_Standard_Bottle_Size__c</formula>
        <label>Btl/9L</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Btl_Unit_Case__c</fullName>
        <label>Btl/Unit Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Gift_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Group_Code__c</fullName>
        <externalId>true</externalId>
        <label>Item Group Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Group_Name__c</fullName>
        <label>Item Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_KPI_Point_Value__c</fullName>
        <formula>ASI_KOR_Sub_Brand__r.ASI_KOR_KPI_Point__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Point Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Name_Kor__c</fullName>
        <label>Name-Kor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boxes (BOX)</fullName>
                </value>
                <value>
                    <fullName>Brandies (BRD)</fullName>
                </value>
                <value>
                    <fullName>Gin (OTG)</fullName>
                </value>
                <value>
                    <fullName>Liquor (OTL)</fullName>
                </value>
                <value>
                    <fullName>Rum (OTR)</fullName>
                </value>
                <value>
                    <fullName>Tequila (OTT)</fullName>
                </value>
                <value>
                    <fullName>Vodka (OTV)</fullName>
                </value>
                <value>
                    <fullName>Pos Items (POS)</fullName>
                </value>
                <value>
                    <fullName>Bourbon Whisky (WHB)</fullName>
                </value>
                <value>
                    <fullName>Irish Whisky (WHI)</fullName>
                </value>
                <value>
                    <fullName>Scotch Whisky (WHS)</fullName>
                </value>
                <value>
                    <fullName>Sparkling Wines (WIS)</fullName>
                </value>
                <value>
                    <fullName>Still Wines (WIT)</fullName>
                </value>
                <value>
                    <fullName>Others (777)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Product_Grade__c</fullName>
        <label>Product Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Standard_Bottle_Size__c</fullName>
        <label>Standard Bottle Size (ml)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sub_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Brand</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipLabel>Item Groups</relationshipLabel>
        <relationshipName>Item_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_VMS_Item_Group_Code__c</fullName>
        <externalId>true</externalId>
        <label>VMS Item Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Item Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_KOR_Sub_Brand__c</columns>
        <columns>NAME</columns>
        <columns>ASI_KOR_Item_Group_Name__c</columns>
        <columns>ASI_KOR_KPI_Point_Value__c</columns>
        <columns>ASI_CRM_KR_Priority_Item__c</columns>
        <columns>ASI_KOR_Standard_Bottle_Size__c</columns>
        <columns>ASI_KOR_VMS_Item_Group_Code__c</columns>
        <columns>ASI_CRM_KR_StockInTradeSIT__c</columns>
        <columns>ASI_KOR_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Item Group Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>